hphp/test/zend/good/ext-standard-misc/time_nanosleep_error3.php
<?php

$nano = time_nanosleep(-2, 1000);

?>