hphp/test/zend/bad/ext/standard/tests/misc/time_nanosleep_error2.php
<?php

$nano = time_nanosleep(2, 'B');

?>